solved some style issues on mobile

--- a/frontend/src/scss/_header.scss
+++ b/frontend/src/scss/_header.scss
@@ -4,8 +4,6 @@
 .header {
   margin-top: 2rem;
   display: grid;
-  // justify-content: center;
-  // align-items: center;
   grid-template-columns: repeat(3, auto);
   width: 100%;
   height: auto;
@@ -47,7 +45,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .header {
     grid-template-rows: repeat(2, auto);
     grid-template-columns: repeat(2, auto);
@@ -63,7 +61,7 @@
     }
 
     .heading {
-      padding-top: 1rem;
+      // padding-top: 1rem;
       grid-area: 2 / 1 / 3 / 3;
     }
   }
